# large-pdf-convertor

./: README.md
large-pdf-converter/: README.md  pyproject.toml
large-pdf-converter/src/: convert-fast.py  convert.py  swift-test-slow.csv  swift-test.csv
