[project]
name = "convert"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "pdfminer2 (>=20151206,<20151207)",
    "chardet (>=5.2.0,<6.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
]

[tool.poetry]
packages = [{include = "convert", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
